samples/_failures_safe/1761260973_9d5943_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_14c85e86.c: In function ‘main’:
./samples/SAFE/__tmp_14c85e86.c:172:15: error: expected ‘;’ at end of input
  172 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_14c85e86.c:172:9: error: expected declaration or statement at end of input
  172 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_14c85e86.c:172:9: error: expected declaration or statement at end of input
